--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   },
   "dependencies": {
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/socket.io": "^3.0.1",
     "bcrypt": "^5.1.1",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.1",
+    "socket.io": "^4.8.0",
     "swagger-ui-express": "^5.0.1",
     "ts-node": "^10.9.2"
   }
