--- a/tsconfig.json
+++ b/tsconfig.json
@@ -111,6 +111,6 @@
     "src/**/*.ts",
     "src/types/*.d.ts"
     , "src/types/types.d.ts"  
-  ],
+, "socket.ts"  ],
    "files": ["src/types/types.d.ts"]
 }
