--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.1",
+    "mysql2": "^3.11.3",
+    "sequelize": "^6.37.4",
     "socket.io": "^4.8.0",
     "swagger-ui-express": "^5.0.1",
     "ts-node": "^10.9.2"
